# calculator

./: README.md  meson.build
data/: calculator.desktop.in
src/: app.c  app.h  calculator.gresource.xml  main.c  main_window.c  main_window.h  meson.build
src/include/: calculator.h
src/parser/: gramatica.txt  math_operations.c  math_operations.h  math_parse.c  math_parse.h  math_token.c  math_token.h  meson.build
src/ui/: buttons_basic.ui  main_window.ui  main_window.ui~
